namespace OrderManagement.After.Models;

public enum OrderStatus
{
    Pending,
    Confirmed,
    Shipped,
    Cancelled
}
